Data structure experiment 6: binary tree
Data structure experiment 6: binary tree
数据结构实验6：二叉树

--- a/x1.in
+++ b/x1.in
@@ -1,38 +1,4 @@
-{[()]}
-[]
-()
-{}
-[
-]
-{
-}
-(
-)
-()}
-[]}
-{}}
-[])
-{})
-())
-()]
-{}]
-[]]
-(()
-([]
-({}
-[()
-[[]
-[{}
-{()
-{[]
-{{}
-242
-ertger
-465y
-dfgrt
-456[]456[565]{}5646sdfdg
-[()]
-({})
-{()}
-[()[]{}]
-[[())]
+BinaryTree
+A 1 1
+B 0 0
+C 0 0
